--- a/control/content/templates/Main.html
+++ b/control/content/templates/Main.html
@@ -10,41 +10,45 @@
         </div>
     </div>
     <hr>
+
     <div ng-class="{'changeCss':selected1===true}">
-        <div ng-click="selected1 = true">
+        <div ng-click="allMatches()">
             <input type="radio" ng-disabled="true">All Matches
         </div>
         <span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"
-              ng-show="selected1" ng-click="selected1 = false"></span>
+              ng-show="selected1" ng-click="removeAllMatches()"></span>
     </div>
-    <div ng-class="{'changeCss':selected2===true}">
-        <div ng-click="selected2 = true">
-            <input type="radio" ng-disabled="true">All Results
-        </div>
-        <span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"
-              ng-show="selected2" ng-click="selected2 = false"></span>
-    </div>
-    <div ng-class="{'changeCss':selected3===true}">
-        <div ng-click="selected3 = true">
-            <input type="radio" ng-disabled="true">Team Results
-        </div>
-        <span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"
-              ng-show="selected3" ng-click="selected3 = false"></span>
-    </div>
-    <div ng-class="{'changeCss':selected4===true}">
-        <div ng-click="selected4 = true">
-            <input type="radio" ng-disabled="true">Group Results
-        </div>
-        <span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"
-              ng-show="selected4" ng-click="selected4 = false"></span>
-    </div>
-    <div ng-class="{'changeCss':selected5===true}">
-        <div ng-click="selected5 = true">
-            <input type="radio" ng-disabled="true">Teams
-        </div>
-        <span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"
-              ng-show="selected5" ng-click="selected5 = false"></span>
-    </div>
+
+    <div style="height: 30px;background: wheat;" ng-click="checking()"></div>
+
+    <!--<div ng-class="{'changeCss':selected2===true}">-->
+        <!--<div ng-click="selected2 = true">-->
+            <!--<input type="radio" ng-disabled="true">All Results-->
+        <!--</div>-->
+        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
+              <!--ng-show="selected2" ng-click="selected2 = false"></span>-->
+    <!--</div>-->
+    <!--<div ng-class="{'changeCss':selected3===true}">-->
+        <!--<div ng-click="selected3 = true">-->
+            <!--<input type="radio" ng-disabled="true">Team Results-->
+        <!--</div>-->
+        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
+              <!--ng-show="selected3" ng-click="selected3 = false"></span>-->
+    <!--</div>-->
+    <!--<div ng-class="{'changeCss':selected4===true}">-->
+        <!--<div ng-click="selected4 = true">-->
+            <!--<input type="radio" ng-disabled="true">Group Results-->
+        <!--</div>-->
+        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
+              <!--ng-show="selected4" ng-click="selected4 = false"></span>-->
+    <!--</div>-->
+    <!--<div ng-class="{'changeCss':selected5===true}">-->
+        <!--<div ng-click="selected5 = true">-->
+            <!--<input type="radio" ng-disabled="true">Teams-->
+        <!--</div>-->
+        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
+              <!--ng-show="selected5" ng-click="selected5 = false"></span>-->
+    <!--</div>-->
     <!--<div>-->
     <!--<table>-->
     <!--<thead>-->
