--- a/control/content/templates/Main.html
+++ b/control/content/templates/Main.html
@@ -1,6 +1,8 @@
 <div>
+    <!-- Carousel -->
     <div id="carousel"></div>
     <hr>
+    <!--What you see what you get-->
     <div class="item row clearfix">
         <div class="main col-md-12 pull-left">
             <textarea ui-tinymce="ContentHome.bodyWYSIWYGOptions" class="form-control"
@@ -10,43 +12,15 @@
         </div>
     </div>
     <hr>
-
-    <div ng-class="{'changeCss':selected1===true}">
-        <div ng-click="allMatches()">
-            <input type="radio" ng-disabled="true">All Matches
-        </div>
-        <span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"
-              ng-show="selected1" ng-click="removeAllMatches()"></span>
+    <!--Checkboxes-->
+    <div>
+        <input type="checkbox" ng-model="flag.allMatches" ng-checked = "flag.allMatches">All Matches <br>
+        <input type="checkbox" ng-model="flag.resultsByCountryCode" ng-checked = "flag.resultsByCountryCode">Results By Country Code <br>
+        <input type="checkbox" ng-model="flag.teamResults" ng-checked = "flag.teamResults">Team Results <br>
+        <input type="checkbox" ng-model="flag.groupResults" ng-checked = "flag.groupResults">Group Results <br>
+        <input type="checkbox" ng-model="flag.teams" ng-checked = "flag.teams">Teams <br>
+        <input type="submit" ng-click="saveFlags()">
     </div>
-
-    <!--<div ng-class="{'changeCss':selected2===true}">-->
-        <!--<div ng-click="selected2 = true">-->
-            <!--<input type="radio" ng-disabled="true">All Results-->
-        <!--</div>-->
-        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
-              <!--ng-show="selected2" ng-click="selected2 = false"></span>-->
-    <!--</div>-->
-    <!--<div ng-class="{'changeCss':selected3===true}">-->
-        <!--<div ng-click="selected3 = true">-->
-            <!--<input type="radio" ng-disabled="true">Team Results-->
-        <!--</div>-->
-        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
-              <!--ng-show="selected3" ng-click="selected3 = false"></span>-->
-    <!--</div>-->
-    <!--<div ng-class="{'changeCss':selected4===true}">-->
-        <!--<div ng-click="selected4 = true">-->
-            <!--<input type="radio" ng-disabled="true">Group Results-->
-        <!--</div>-->
-        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
-              <!--ng-show="selected4" ng-click="selected4 = false"></span>-->
-    <!--</div>-->
-    <!--<div ng-class="{'changeCss':selected5===true}">-->
-        <!--<div ng-click="selected5 = true">-->
-            <!--<input type="radio" ng-disabled="true">Teams-->
-        <!--</div>-->
-        <!--<span class="glyphicon glyphicon-remove" style="position: absolute;top: 5px;right: 5px;cursor: pointer;"-->
-              <!--ng-show="selected5" ng-click="selected5 = false"></span>-->
-    <!--</div>-->
     <!--<div>-->
     <!--<table>-->
     <!--<thead>-->
