--- a/widget/templates/Widget.html
+++ b/widget/templates/Widget.html
@@ -1,159 +1,149 @@
-<div id="carousel"></div>
-<hr>
-<div>
-    <form>
-        <span>
-            <input type="radio" ng-model="dataValue" value="B" ng-change="dataValueChanged()" name="dataValue">All Matches<br>
-        </span>
-        <span>
-            <input type="radio" ng-model="dataValue" value="A" ng-change="dataValueChanged()" name="dataValue">All Results<br>
-        </span>
-        <span>
-            <input type="radio" ng-model="dataValue" value="C" ng-change="dataValueChanged()" name="dataValue">Team Result<br>
-        </span>
-        <span>
-            <input type="radio" ng-model="dataValue" value="D" ng-change="dataValueChanged()" name="dataValue">Group Results<br>
-        </span>
-        <span>
-            <input type="radio" ng-model="dataValue" value="E" ng-change="dataValueChanged()" name="dataValue">Teams<br>
-        </span>
-    </form>
-</div>
+<!--<div id="carousel"></div>-->
+<!--<hr>-->
+<!--<div style="padding: 10px;">-->
+    <!--<form>-->
+        <!--<span ng-show='flag.allMatches'>-->
+            <!--<input type="radio" ng-model="dataValue" value="B" ng-change="dataValueChanged()" name="dataValue">All Matches<br>-->
+        <!--</span>-->
+        <!--<span ng-show='flag.resultsByCountryCode'>-->
+            <!--<input type="radio" ng-model="dataValue" value="A" ng-change="dataValueChanged()" name="dataValue">All Results<br>-->
+        <!--</span>-->
+        <!--<span ng-show='flag.teamResults'>-->
+            <!--<input type="radio" ng-model="dataValue" value="C" ng-change="dataValueChanged()" name="dataValue">Team Result<br>-->
+        <!--</span>-->
+        <!--<span ng-show='flag.groupResults'>-->
+            <!--<input type="radio" ng-model="dataValue" value="D" ng-change="dataValueChanged()" name="dataValue">Group Results<br>-->
+        <!--</span>-->
+        <!--<span ng-show='flag.teams'>-->
+            <!--<input type="radio" ng-model="dataValue" value="E" ng-change="dataValueChanged()" name="dataValue">Teams<br>-->
+        <!--</span>-->
+    <!--</form>-->
+<!--</div>-->
 
-        {{dataValue}}
+<!--<div>-->
+    <!--<div ng-show="dataValue == 'C'" class="table-responsive">-->
+        <!--<table class="table table-striped table-hover">-->
+            <!--<thead>-->
+            <!--<th>away_team</th>-->
+            <!--<th>away_team_code</th>-->
+            <!--<th>home_team</th>-->
+            <!--<th>home_team_code</th>-->
+            <!--<th>location</th>-->
+            <!--<th>match_number</th>-->
+            <!--<th>status</th>-->
+            <!--<th>winner</th>-->
+            <!--<th>winner_code</th>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+            <!--<tr ng-repeat="data in result">-->
+                <!--<td>{{data.away_team.country}}</td>-->
+                <!--<td>{{data.away_team.code}}</td>-->
+                <!--<td>{{data.home_team.country}}</td>-->
+                <!--<td>{{data.home_team.code}}</td>-->
+                <!--<td>{{data.location}}</td>-->
+                <!--<td>{{data.match_number}}</td>-->
+                <!--<td>{{data.status}}</td>-->
+                <!--<td>{{data.winner}}</td>-->
+                <!--<td>{{data.winner_code}}</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+        <!--</table>-->
+    <!--</div>-->
 
-<div>
-    <div ng-if="dataValue == 'A'" class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-            <th>away_team</th>
-            <th>away_team_code</th>
-            <th>home_team</th>
-            <th>home_team_code</th>
-            <th>location</th>
-            <th>match_number</th>
-            <th>status</th>
-            <th>winner</th>
-            <th>winner_code</th>
-            </thead>
-            <tbody>
-            <tr ng-repeat="data in result">
-                <td>{{data.away_team.country}}</td>
-                <td>{{data.away_team.code}}</td>
-                <td>{{data.home_team.country}}</td>
-                <td>{{data.home_team.code}}</td>
-                <td>{{data.location}}</td>
-                <td>{{data.match_number}}</td>
-                <td>{{data.status}}</td>
-                <td>{{data.winner}}</td>
-                <td>{{data.winner_code}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <!--<div ng-show="dataValue == 'B'" class="table-responsive">-->
+        <!--<table class="table table-striped table-hover">-->
+            <!--<thead>-->
+            <!--<th>Country</th>-->
+            <!--<th>Fifa_code</th>-->
+            <!--<th>Group_id</th>-->
+            <!--<th>Games Played</th>-->
+            <!--<th>Wins</th>-->
+            <!--<th>Lose</th>-->
+            <!--<th>Points</th>-->
+            <!--<th>goals_for</th>-->
+            <!--<th>goals_against</th>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+            <!--<tr ng-repeat="data in result">-->
+                <!--<td>{{data.country}}</td>-->
+                <!--<td>{{data.fifa_code}}</td>-->
+                <!--<td>{{data.group_id}}</td>-->
+                <!--<td>{{data.games_played}}</td>-->
+                <!--<td>{{data.wins}}</td>-->
+                <!--<td>{{data.losses}}</td>-->
+                <!--<td>{{data.points}}</td>-->
+                <!--<td>{{data.goals_for}}</td>-->
+                <!--<td>{{data.goals_against}}</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+        <!--</table>-->
+    <!--</div>-->
 
-    <div ng-if="dataValue == 'B'" class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-            <th>Country</th>
-            <th>Fifa_code</th>
-            <th>Group_id</th>
-            <th>Games Played</th>
-            <th>Wins</th>
-            <th>Lose</th>
-            <th>Points</th>
-            <th>goals_for</th>
-            <th>goals_against</th>
-            </thead>
-            <tbody>
-            <tr ng-repeat="data in result">
-                <td>{{data.country}}</td>
-                <td>{{data.fifa_code}}</td>
-                <td>{{data.group_id}}</td>
-                <td>{{data.games_played}}</td>
-                <td>{{data.wins}}</td>
-                <td>{{data.losses}}</td>
-                <td>{{data.points}}</td>
-                <td>{{data.goals_for}}</td>
-                <td>{{data.goals_against}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <!--<div ng-show="dataValue == 'A'" class="table-responsive">-->
+        <!--<table class="table table-striped table-hover">-->
+            <!--<thead>-->
+            <!--<th>Country</th>-->
+            <!--<th>Fifa_code</th>-->
+            <!--<th>Group_id</th>-->
+            <!--<th>Games Played</th>-->
+            <!--<th>Wins</th>-->
+            <!--<th>Lose</th>-->
+            <!--<th>Points</th>-->
+            <!--<th>goals_for</th>-->
+            <!--<th>goals_against</th>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+            <!--<tr ng-repeat="data in result">-->
+                <!--<td>{{data.country}}</td>-->
+                <!--<td>{{data.fifa_code}}</td>-->
+                <!--<td>{{data.group_id}}</td>-->
+                <!--<td>{{data.games_played}}</td>-->
+                <!--<td>{{data.wins}}</td>-->
+                <!--<td>{{data.losses}}</td>-->
+                <!--<td>{{data.points}}</td>-->
+                <!--<td>{{data.goals_for}}</td>-->
+                <!--<td>{{data.goals_against}}</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+        <!--</table>-->
+    <!--</div>-->
 
-    <div ng-if="dataValue == 'A'" class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-            <th>Country</th>
-            <th>Fifa_code</th>
-            <th>Group_id</th>
-            <th>Games Played</th>
-            <th>Wins</th>
-            <th>Lose</th>
-            <th>Points</th>
-            <th>goals_for</th>
-            <th>goals_against</th>
-            </thead>
-            <tbody>
-            <tr ng-repeat="data in result">
-                <td>{{data.country}}</td>
-                <td>{{data.fifa_code}}</td>
-                <td>{{data.group_id}}</td>
-                <td>{{data.games_played}}</td>
-                <td>{{data.wins}}</td>
-                <td>{{data.losses}}</td>
-                <td>{{data.points}}</td>
-                <td>{{data.goals_for}}</td>
-                <td>{{data.goals_against}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <!--<div ng-show="dataValue == 'D'" class="table-responsive">-->
+        <!--<table class="table table-striped table-hover" ng-repeat="data in result">-->
 
-    <div ng-if="dataValue == 'D'" class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-            <th>away_team</th>
-            <th>away_team_code</th>
-            <th>home_team</th>
-            <th>home_team_code</th>
-            <th>location</th>
-            <th>match_number</th>
-            <th>status</th>
-            <th>winner</th>
-            <th>winner_code</th>
-            </thead>
-            <tr ng-repeat="data in result">
-                <td>{{data.away_team.country}}</td>
-                <td>{{data.away_team.code}}</td>
-                <td>{{data.home_team.country}}</td>
-                <td>{{data.home_team.code}}</td>
-                <td>{{data.location}}</td>
-                <td>{{data.match_number}}</td>
-                <td>{{data.status}}</td>
-                <td>{{data.winner}}</td>
-                <td>{{data.winner_code}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+            <!--<thead>-->
+                <!--<th style="font-weight: bold;">Group {{data.group.id}}</th>-->
+                <!--<th>Team_id</th>-->
+                <!--<th>Fifa_code</th>-->
+                <!--<th>Points</th>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+                <!--<tr ng-repeat="team in data.group.teams">-->
+                    <!--<td>{{team.team.country}}</td>-->
+                    <!--<td>{{team.team.id}}</td>-->
+                    <!--<td>{{team.team.fifa_code}}</td>-->
+                    <!--<td>{{team.team.points}}</td>-->
+                <!--</tr>-->
+            <!--</tbody>-->
+        <!--</table>-->
+    <!--</div>-->
 
-    <div ng-if="dataValue == 'E'" class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-            <th>Country</th>
-            <th>Fifa_code</th>
-            <th>Group_id</th>
-            </thead>
-            <tbody>
-            <tr ng-repeat="data in result">
-                <td>{{data.country}}</td>
-                <td>{{data.fifa_code}}</td>
-                <td>{{data.group_id}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <!--<div ng-show="dataValue == 'E'" class="table-responsive">-->
+        <!--<table class="table table-striped table-hover">-->
+            <!--<thead>-->
+            <!--<th>Country</th>-->
+            <!--<th>Fifa_code</th>-->
+            <!--<th>Group_id</th>-->
+            <!--</thead>-->
+            <!--<tbody>-->
+            <!--<tr ng-repeat="data in result">-->
+                <!--<td>{{data.country}}</td>-->
+                <!--<td>{{data.fifa_code}}</td>-->
+                <!--<td>{{data.group_id}}</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+        <!--</table>-->
+    <!--</div>-->
 
-</div>
-
+<!--</div>-->
+<button ng-click='send()'>Send message</button>
