Change in content

--- a/control/content/templates/Main.html
+++ b/control/content/templates/Main.html
@@ -1,26 +1,26 @@
-<div>
-    <!-- Carousel -->
-    <div id="carousel"></div>
-    <hr>
-    <!--What you see what you get-->
-    <div class="item row clearfix">
-        <div class="main col-md-12 pull-left">
-            <textarea ui-tinymce="ContentHome.bodyWYSIWYGOptions" class="form-control"
-                      rows="3" col="100"
-                      placeholder="This is WYSIWYG"
-                      data-ng-model="ContentHome.data.content.description"></textarea>
-        </div>
-    </div>
-    <hr>
-    <!--Checkboxes-->
-    <div>
-        <input type="checkbox" ng-model="flag.allMatches" ng-checked = "flag.allMatches">All Matches <br>
-        <input type="checkbox" ng-model="flag.resultsByCountryCode" ng-checked = "flag.resultsByCountryCode">Results By Country Code <br>
-        <input type="checkbox" ng-model="flag.teamResults" ng-checked = "flag.teamResults">Team Results <br>
-        <input type="checkbox" ng-model="flag.groupResults" ng-checked = "flag.groupResults">Group Results <br>
-        <input type="checkbox" ng-model="flag.teams" ng-checked = "flag.teams">Teams <br>
-        <input type="submit" ng-click="saveFlags()">
-    </div>
+<!--<div>-->
+    <!--&lt;!&ndash; Carousel &ndash;&gt;-->
+    <!--<div id="carousel"></div>-->
+    <!--<hr>-->
+    <!--&lt;!&ndash;What you see what you get&ndash;&gt;-->
+    <!--<div class="item row clearfix">-->
+        <!--<div class="main col-md-12 pull-left">-->
+            <!--<textarea ui-tinymce="ContentHome.bodyWYSIWYGOptions" class="form-control"-->
+                      <!--rows="3" col="100"-->
+                      <!--placeholder="This is WYSIWYG"-->
+                      <!--data-ng-model="ContentHome.data.content.description"></textarea>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<hr>-->
+    <!--&lt;!&ndash;Checkboxes&ndash;&gt;-->
+    <!--<div>-->
+        <!--<input type="checkbox" ng-model="flag.allMatches" ng-checked = "flag.allMatches">All Matches <br>-->
+        <!--<input type="checkbox" ng-model="flag.resultsByCountryCode" ng-checked = "flag.resultsByCountryCode">Results By Country Code <br>-->
+        <!--<input type="checkbox" ng-model="flag.teamResults" ng-checked = "flag.teamResults">Team Results <br>-->
+        <!--<input type="checkbox" ng-model="flag.groupResults" ng-checked = "flag.groupResults">Group Results <br>-->
+        <!--<input type="checkbox" ng-model="flag.teams" ng-checked = "flag.teams">Teams <br>-->
+        <!--<input type="submit" ng-click="saveFlags()">-->
+    <!--</div>-->
     <!--<div>-->
     <!--<table>-->
     <!--<thead>-->
@@ -50,4 +50,4 @@
     <!--</table>-->
     <!--</div>-->
 
-</div>
+<!--</div>-->
